default/objects/CF_Settings__c/CF_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings for scoring and black list services for manual sales</description>
    <label>CF Settings</label>
</CustomObject>