default/objects/CF_Settings__c/fields/Approval_Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Name__c</fullName>
    <description>Approval process name for Black Black List</description>
    <inlineHelpText>Approval process name for Black Black List</inlineHelpText>
    <label>Approval Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>