default/objects/CF_Settings__c/fields/Black_list_check_when_scoring_expired__c.field-meta.xml
<CustomField>
    <fullName>Black_list_check_when_scoring_expired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Black list checking is processed only when scoring is expired</description>
    <inlineHelpText>Black list checking is processed only when scoring is expired</inlineHelpText>
    <label>Black list check when scoring expired</label>
    <type>Checkbox</type>
</CustomField>