default/objects/CF_Settings__c/fields/Blocked_companies_owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Blocked_companies_owner_ID__c</fullName>
    <description>Пользователь, на которого переводятся неактивные организации для их блокировки</description>
    <inlineHelpText>Пользователь, на которого переводятся неактивные организации для их блокировки</inlineHelpText>
    <label>Blocked companies owner ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>