default/objects/CF_Settings__c/fields/Check_on_opportunity_create__c.field-meta.xml
<CustomField>
    <fullName>Check_on_opportunity_create__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks record when it is created</description>
    <inlineHelpText>Checks record when it is created</inlineHelpText>
    <label>Check on opportunity create</label>
    <type>Checkbox</type>
</CustomField>