default/objects/CF_Settings__c/fields/Check_on_opportunity_update__c.field-meta.xml
<CustomField>
    <fullName>Check_on_opportunity_update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks record when it is updated</description>
    <inlineHelpText>Checks record when it is updated</inlineHelpText>
    <label>Check on opportunity update</label>
    <type>Checkbox</type>
</CustomField>