default/objects/CF_Settings__c/fields/Days_scoring_to_expire__c.field-meta.xml
<CustomField>
    <fullName>Days_scoring_to_expire__c</fullName>
    <defaultValue>&#39;90&#39;</defaultValue>
    <label>Days scoring to expire</label>
    <length>5</length>
    <type>Text</type>
</CustomField>