default/objects/CF_Settings__c/fields/Opportunity_stages__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_stages__c</fullName>
    <description>Opportunity stages which is conditions for record checking. Every new value must be on new line</description>
    <inlineHelpText>Opportunity stages which is conditions for record checking. Every new value must be on new line</inlineHelpText>
    <label>Opportunity stages</label>
    <type>TextArea</type>
</CustomField>